testsuite/tests/type-data/should_fail/TDTagToEnum.stderr
TDTagToEnum.hs:10:5: error: [GHC-39999]
    • No instance for ‘GHC.Internal.Magic.TagToEnum.TagToEnum Letter’
        arising from a use of ‘tagToEnum#’
    • In the expression: tagToEnum# 0#
      In an equation for ‘f’: f = tagToEnum# 0#

